Criado uma Div img para inserir as imagens dentro

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     footer{
         background-color: rgb(185, 182, 182);
     }
+    #img{
+        display: block;
+        background-color: black;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin: 10px 200px 15px 275px ;
+    }
 </style>
 <body>
     <header>
@@ -36,11 +43,11 @@
         <p>Com esta grande reforma, profundas modificações foram feitas no bairro e na praça, como a demolição da Matriz do Corpo Santo e a abertura de novas e largas avenidas. No local onde estava a igreja, está edificado o edifício Maurício de Nassau, de características modernas e fachadas em vidro. Ao seu lado foram construídos os prédios da Associação Comercial de Pernambuco e a Bolsa de Valores. Estes dois prédios apresentam, em sua arquitetura, nítida influência francesa que se caracteriza pela mistura de diversos elementos construtivos, além do armazém 10 e 12 que serviam ao porto do Recife para estoque de açúcar. Estes prédios, hoje, abrigam a sede do Grupo Industrial João Santos, o Santander Cultural, a Associação Comercial de Pernambuco, a Caixa Cultural e o Centro de Artesanato de Pernambuco, considerado o maior do segmento no Brasil.
 
         Em 1999 a praça que existia no local recebeu severas modificações. O busto do Barão do Rio Branco e o Marco Zero foram realocados para a borda da praça. A “nova praça” foi projetada pelo pintor Cícero Dias, em 1999. No seu centro se encontra uma enorme obra de arte feita por ele. Inspirado em sua obra Eu vi o mundo e ele começava no Recife, criou um grande circulo com uma Rosa dos Ventos no centro. A obra tem em média 10m de raio. Atualmente serve como ponto de encontro de jovens, desportistas, artistas, turistas e moradores da cidade. Além de ser palco de comemorações e apresentações artísticas.</p>
-
-        <img src="imagens/imagem 03.jpg" alt="" width="400">
-        <img src="imagens/imagem 02.jpg" alt="" width="440">
-        <img src="imagens/imagem 01.jpg" alt="" width="400">
-
+        <div id="img" width="400">   
+        <img src="imagens/imagem 03.jpg" alt="">
+        <img src="imagens/imagem 02.jpg" alt="" width="300">
+        <img src="imagens/imagem 01.jpg" alt="">
+        </div>
     </main>
     <footer>
         <span>Marco Zero(c)</span>
