Criado a pagina turismo.html e sobre.html

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
         <span>Marco Zero</span>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Turismo</li>
-                <li>Sobre</li>
+                <a href="index.html"><li>Home</li></a>
+                <a href="turismo.html"><li>Pontos Turisticos</li></a>
+                <a href="sobre.html"><li>Sobre</li></a>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Historia do Marco Zero</h1>
+        <h1>História do Marco Zero</h1>
+        <hr>
         <p>No início do século passado, o centro do Recife passou por drásticas reformas, com projetos de higienização urbana e melhoramento das condições do Porto do Recife. Na prática, a higienização social se traduziu em desapropriações de pelo menos 480 imóveis que foram demolidos para a abertura das três novas avenidas no Bairro.</p>
         <p>Com esta grande reforma, profundas modificações foram feitas no bairro e na praça, como a demolição da Matriz do Corpo Santo e a abertura de novas e largas avenidas. No local onde estava a igreja, está edificado o edifício Maurício de Nassau, de características modernas e fachadas em vidro. Ao seu lado foram construídos os prédios da Associação Comercial de Pernambuco e a Bolsa de Valores. Estes dois prédios apresentam, em sua arquitetura, nítida influência francesa que se caracteriza pela mistura de diversos elementos construtivos, além do armazém 10 e 12 que serviam ao porto do Recife para estoque de açúcar. Estes prédios, hoje, abrigam a sede do Grupo Industrial João Santos, o Santander Cultural, a Associação Comercial de Pernambuco, a Caixa Cultural e o Centro de Artesanato de Pernambuco, considerado o maior do segmento no Brasil.
 
