--- a/code_css/index.html
+++ b/code_css/index.html
@@ -20,7 +20,7 @@
         </a>
         <nav>
             <ul>
-                <a href="index.html"><li>Home</li></a>
+                <a href="index.html"><li>Principal</li></a>
                 <a href="lugares.html"><li>Pontos Turisticos</li></a>
                 <a href="sobre.html"><li>Sobre</li></a>
             </ul>
