Nova branch criado paa utilizacao do flexbox

--- a/code_css/lugares.html
+++ b/code_css/lugares.html
@@ -13,20 +13,19 @@
 
 <body>
     <header>
-    <div class="container">
-        <div class="wrapper">
-        <a href="">
-            <img src="/assets/viva-recife-color.png" alt="Logo Site">
-        </a>
+        
         <nav>
+            <a href="">
+                <img src="/assets/viva-recife-color.png" alt="Logo Site">
+            </a>
             <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="lugares.html"><li>Pontos Turisticos</li></a>
-                <a href="sobre.html"><li>Sobre</li></a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="lugares.html">Pontos Turisticos</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="#" class="button">Contato</a></li>
             </ul>
+            
         </nav>
-        </div>
-    </div>
     </header>
 
     <section>
