--- a/code_css/index.html
+++ b/code_css/index.html
@@ -80,11 +80,8 @@
 
     </section>
     <footer>
-       
-        <div class="rodape">
-            <div id="img-footer">
-            <img src="/assets/viva-recife-color.png" alt=""> 
-            </div>     
+        <div class="rodape"></div>
+            <img src="/assets/viva-recife-color.png" alt="">               
             <span>Desenvolvido por klynger&copy</span>     
             <ul>
                 <li>Facebook</li>
