feito alteracao no rodape da pagina usando flexbox

--- a/code_css/index.html
+++ b/code_css/index.html
@@ -80,15 +80,15 @@
 
     </section>
     <footer>
-        <div class="rodape"></div>
-            <img src="/assets/viva-recife-color.png" alt="">               
+            <div id="img-rod">
+                <img src="/assets/viva-recife-color.png" alt=""> 
+            </div>              
             <span>Desenvolvido por klynger&copy</span>     
             <ul>
                 <li>Facebook</li>
                 <li>Instagram</li>
                 <li>Youtube</li>
-            </ul>
-        </div>    
+            </ul>  
     </footer>
 
 </main>
