feito alteracao no rodape da pagina

--- a/code_css/lugares.html
+++ b/code_css/lugares.html
@@ -104,15 +104,15 @@
 
     </section>
     <footer>
-        <div class="rodape">
-            <div id="img-footer">
-                <img src="/assets/viva-recife-color.png" alt=""> 
-                </div>     
-                <span>Desenvolvido por klynger&copy</span>   
-            <ul>
-                <li>Facebook</li>
-                <li>Instagram</li>
-                <li>Youtube</li>
+        <div id="img-rod">
+            <img src="/assets/viva-recife-color.png" alt=""> 
+        </div>              
+        <span>Desenvolvido por klynger&copy</span>     
+        <ul>
+            <li>Facebook</li>
+            <li>Instagram</li>
+            <li>Youtube</li>
+        </ul>  
             </ul>
         </div>    
     </footer>
